JS: use static factory methods for Double and Integer
These constructors are deprecated since Java 9 and don't require a
unique object anyway.

Signed-off-by: Harvey Harrison <harvey.harrison@gmail.com>